--- a/package.json
+++ b/package.json
@@ -2,10 +2,29 @@
   "name": "ironsphere-server",
   "version": "1.0.0",
   "description": "",
+  "repository": "https://github.com/caxapexac/IronsphereServer",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "sh ./scripts/test.sh",
+    "start": "sh ./scripts/start.sh",
+    "build": "sh ./scripts/build.sh",
+    
+    "ci-deploy": "sh ./scripts/deploy.sh",
+    "gyp-config": "node-gyp configure",
+    "gyp-build": "node-gyp build",
+
+    "win-node-gyp-quick-fix": "scripts\\win-node-gyp-quick-fix.bat"
   },
   "author": "caxapexac",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/caxapexac/IronsphereServer/issues"
+  },
+  "homepage": "https://github.com/caxapexac/IronsphereServer#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "node-addon-api": "^2.0.0"
+  }
 }
