--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "test": "sh ./scripts/test.sh",
     "start": "sh ./scripts/start.sh",
     "build": "sh ./scripts/build.sh",
-    
     "ci-deploy": "sh ./scripts/deploy.sh",
     "gyp-config": "node-gyp configure",
     "gyp-build": "node-gyp build",
-
     "win-node-gyp-quick-fix": "scripts\\win-node-gyp-quick-fix.bat"
   },
   "author": "caxapexac",
@@ -22,6 +20,7 @@
   },
   "homepage": "https://github.com/caxapexac/IronsphereServer#readme",
   "dependencies": {
+    "bindings": "^1.5.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
