--- a/package.json
+++ b/package.json
@@ -1,29 +1,41 @@
 {
   "name": "ironsphere-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Powerfull standalone [strategy/Ironsphere] authorization/game server",
+  "author": "caxapexac",
+  "contributors": [
+    "MilesArtemius <@gmail.com>",
+    "Dmitriy129 <@gmail.com>"
+  ],
+  "license": "ISC",
   "repository": "https://github.com/caxapexac/IronsphereServer",
+  "homepage": "https://github.com/caxapexac/IronsphereServer#readme",
+  "bugs": {
+    "url": "https://github.com/caxapexac/IronsphereServer/issues"
+  },
+  "keywords": [
+    "server",
+    "native",
+    "backend"
+  ],
   "main": "index.js",
   "scripts": {
     "test": "sh ./scripts/test.sh",
     "start": "sh ./scripts/start.sh",
     "build": "sh ./scripts/build.sh",
-    "ci-deploy": "sh ./scripts/deploy.sh",
+    "start-logic": "sh ./scripts/start-logic.sh",
+    "build-logic": "sh ./scripts/build-logic.sh",
+    "ci-deploy": "sh ./scripts/ci-deploy.sh",
     "gyp-config": "node-gyp configure",
     "gyp-build": "node-gyp build",
-    "win-node-gyp-quick-fix": "scripts\\win-node-gyp-quick-fix.bat"
+    "win-node-gyp-quick-fix": "sh scripts/win-gyp-quick-fix.sh"
   },
-  "author": "caxapexac",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/caxapexac/IronsphereServer/issues"
-  },
-  "homepage": "https://github.com/caxapexac/IronsphereServer#readme",
   "dependencies": {
     "bindings": "^1.5.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "node-addon-api": "^2.0.0"
+    "node-addon-api": "^2.0.0",
+    "rimraf": "^3.0.2"
   }
 }
