--- a/package.json
+++ b/package.json
@@ -18,25 +18,37 @@
     "native",
     "backend"
   ],
+  "engines": {
+    "node": "13.0.1"
+  },
   "main": "index.js",
   "scripts": {
-    "test": "sh ./scripts/test.sh",
-    "start": "sh ./scripts/start.sh",
-    "build": "sh ./scripts/build.sh",
-    "start-logic": "sh ./scripts/start-logic.sh",
-    "build-logic": "sh ./scripts/build-logic.sh",
-    "ci-deploy": "sh ./scripts/ci-deploy.sh",
+    "test": "sh scripts/test.sh",
+    "build": "sh scripts/build.sh",
+    "build-prod": "sh scripts/build-prod.sh",
+    "start": "sh scripts/start.sh",
+    "start-prod": "sh scripts/start-prod.sh",
+    "start-logic": "sh scripts/start-logic.sh",
+    "build-logic": "sh scripts/build-logic.sh",
+    "ci-deploy": "sh scripts/ci-deploy.sh",
     "gyp-config": "node-gyp configure",
     "gyp-build": "node-gyp build",
     "win-node-gyp-quick-fix": "sh scripts/win-gyp-quick-fix.sh"
   },
   "dependencies": {
+    "@types/node": "^13.9.0",
+    "@types/socket.io": "^2.1.4",
     "bindings": "^1.5.0",
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
+    "express": "^4.17.1",
     "node-addon-api": "^2.0.0",
     "rimraf": "^3.0.2",
+    "socket.io": "^2.3.0",
+    "ts-node": "^8.6.2",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "typescript": "^3.8.3",
+    "typescript-tslint-plugin": "^0.5.5"
+  },
+  "devDependencies": {
     "jest": "^25.1.0"
   }
 }
