--- a/package.json
+++ b/package.json
@@ -37,16 +37,16 @@
   },
   "dependencies": {
     "@types/node": "^13.9.0",
-    "@types/socket.io": "^2.1.4",
+    "@types/ws": "^7.2.3",
     "bindings": "^1.5.0",
     "express": "^4.17.1",
     "node-addon-api": "^2.0.0",
     "rimraf": "^3.0.2",
-    "socket.io": "^2.3.0",
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3",
-    "typescript-tslint-plugin": "^0.5.5"
+    "typescript-tslint-plugin": "^0.5.5",
+    "ws": "^7.2.3"
   },
   "devDependencies": {
     "jest": "^25.1.0"
