--- a/package.json
+++ b/package.json
@@ -33,13 +33,15 @@
     "ci-deploy": "sh scripts/ci-deploy.sh",
     "gyp-config": "node-gyp configure",
     "gyp-build": "node-gyp build",
-    "win-node-gyp-quick-fix": "sh scripts/win-gyp-quick-fix.sh"
+    "win-node-gyp-quick-fix": "sh scripts/win-gyp-quick-fix.sh",
+    "wp" : "webpack"
   },
   "dependencies": {
     "@types/node": "^13.9.0",
     "@types/ws": "^7.2.3",
     "bindings": "^1.5.0",
     "express": "^4.17.1",
+    "mongodb": "^3.5.7",
     "node-addon-api": "^2.0.0",
     "rimraf": "^3.0.2",
     "ts-node": "^8.6.2",
