--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "title": "Ironsphere Game Server",
   "version": 105,
   "port": 1109,
-  "delta_time": 1123,
-  "chat_capacity": 100
+  "delta_time": 1112,
+  "chat_capacity": 100,
+  "root_folder": "./root/"
 }
